# GaiaViewImGui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
example/: imguiExample.cpp
src/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
src/DataSource/: IDataSource.h  SimulatedDataSource.cpp  SimulatedDataSource.h
src/UI/: GuiRenderer.cpp  GuiRenderer.h
src/Utils/: Clock.h
src/sensor/: Sensor.cpp  Sensor.h  SensorManager.cpp  SensorManager.h  SensorStatus.h  TemperatureSensor.cpp  TemperatureSensor.h
